--- a/package.json
+++ b/package.json
@@ -10,13 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-three/drei": "^9.66.0",
-    "@react-three/fiber": "^8.12.2",
+    "animate.css": "^4.1.1",
+    "framer-motion": "^10.12.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
-    "react-router-dom": "^6.10.0",
-    "three": "^0.151.3"
+    "react-router-dom": "^6.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
